Pom updates